tests/paczka1/fuzzy1/50761051.err
Error in line 1: tw9tbpz S245 59,6
Error in line 9: S245 S245 89,0
Error in line 4: j5haQJxA S245 20,8
Error in line 12: S245 A627 81,0
Error in line 18: tw9tbpz S27 11,2
Error in line 19: tw9tbpz S245 5,8
Error in line 34: j0vkJMKyB A627 45,4
